config/objects/jigsaw_clean__ChatterSettings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Protected</customSettingsVisibility>
    <fields>
        <fullName>jigsaw_clean__ChatterFresher__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fresher</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>jigsaw_clean__ChatterGraveyard__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Graveyard</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>jigsaw_clean__ChatterMoreInfo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>More Info</label>
        <type>Checkbox</type>
    </fields>
    <label>Jigsaw Chatter Settings</label>
</CustomObject>